Comments chnaged